<resources>
    <string name="app_name">RemoteControllerClientRV</string>

    <string name="btn_enter">Enter</string>
    <string name="btn_rightClick">Right Click</string>

    <string name="btn_leftArrow">←</string>
    <string name="btn_upArrow">↑</string>
    <string name="btn_downArrow">↓</string>
    <string name="btn_rightArrow">→</string>

    <string name="btn_WheelAhead">Wheel Ahead</string>
    <string name="btn_WheelBackward">Wheel Backward</string>

    <string name="btn_button01">Button 01</string>
    <string name="btn_button02">Button 02</string>
    <string name="btn_button03">Button 03</string>
    <string name="btn_button04">Button 04</string>
    <string name="btn_button05">Button 05</string>
    <string name="btn_button06">Button 06</string>
    <string name="btn_button07">Button 07</string>
    <string name="btn_button08">Button 08</string>
    <string name="btn_button09">Button 09</string>

    <string name="redis_setting_dialog_title">Redis</string>
    <string name="redis_setting_dialog_close">Close</string>
    <string name="redis_setting_dialog_ip_hint">IP Address</string>
    <string name="redis_setting_dialog_port_hint">Port</string>

    <string name="redis_state">Redis→%s:%s</string>
    <string name="none_ip">---.---.-.-</string>
    <string name="none_port">----</string>

    <string name="mkdir_failed">oops sorry&#8230;\nmake directory failed&#8230;</string>
    <string name="profileDelete_failed">oops sorry&#8230;\nProfile delete failed&#8230;</string>

    <string name="delete_alert_title">Check</string>
    <string name="delete_alert_message">Do you really want to delete this?</string>
    <string name="delete_alert_positive">Yes</string>
    <string name="delete_alert_negative">No</string>

    <string name="menu_add">profile add</string>

    <string name="regist_dialog_title">Profile Regist</string>
    <string name="regist_dialog_positive_button">Regist</string>
    <string name="regist_dialog_negative_button">Cancel</string>
    <string name="regist_dialog_profileName">Profile Name</string>
    <string name="regist_buttonArea">Button %s</string>
    <string name="regist_button_name">Button Name</string>
    <string name="regist_check_ctrl">Ctrl</string>
    <string name="regist_check_alt">Alt</string>
    <string name="regist_check_shift">Shift</string>

    <string name="list_btn_del">Delete</string>
    <string name="list_btn_edit">Edit</string>
</resources>
