<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regist_dialog_profileName"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/regist_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_button01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button01"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_button02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button02"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_button03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button03"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_button04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button04"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_button05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button05"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_button06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button06"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_button07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button07"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_button08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button08"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_button09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1"
                android:text="@string/btn_button09"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/regist_buttons" />

    <TextView
        android:id="@+id/button_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/regist_buttonArea"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/regist_button_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regist_button_name"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/button_area" />

    <Spinner
        android:id="@+id/regist_button_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/regist_button_name" />

    <CheckBox
        android:id="@+id/regist_check_ctrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_check_ctrl"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/regist_check_alt"
        app:layout_constraintTop_toBottomOf="@id/regist_button_type" />

    <CheckBox
        android:id="@+id/regist_check_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_check_alt"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/regist_check_ctrl"
        app:layout_constraintRight_toLeftOf="@id/regist_check_shift"
        app:layout_constraintTop_toBottomOf="@id/regist_button_type" />

    <CheckBox
        android:id="@+id/regist_check_shift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_check_shift"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@id/regist_check_alt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regist_button_type" />

</android.support.constraint.ConstraintLayout>